# RPTK

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  rptk-run.py  rptk.py  rptk_requirements.yml
docs/: CONFIG.md  INSTALL.md  USAGE.md
docs/Docker/: .dockerignore  Dockerbuild_README.txt  Dockerfile.local  README.md  docker_entrypoint.py
example/: CRLM_example.csv  CRLM_example.py  Download_CRLM_WORC.ipynb  README.md  RPTK_Tutorial.ipynb  run_rptk.py
example/DeepLearning/: 00_README.txt  README.md  requirements.txt  run_DeepLearning.py
ll/: README.md
mirp/: __init__.py  experimentClass.py  imagePerturbations.py  imageProcess.py  roiClass.py
mirp/imageFilters/: gaussian.py
src/: __init__.py
src/config/: ._InputDataStatistics.py  ._rptk_config.json  Config_string_generator.py  Data_Completeness_Checker.py  Experiment_config.py  Experiment_setup.py  Feature_sync_config.py  InputDataStatistics.py  Log_generator_config.py  Transformation_config.py  rptk_config.json  structure_generator.py
src/feature_extraction/: ._Extractor.py  Extractor.py  FeatureConsensus.py  Outfile_checker.py  generate_radiomics_feature_map.py  mirp_feature_extraction.py  mirp_pipeline_feature_extraction.py
src/feature_filtering/: ._DataConfigurator.py  ._Feature_formater.py  ._Feature_stability_filter.py  ._Radiomics_Filter_exe.py  DataConfigurator.py  Feature_formater.py  Feature_stability_filter.py  Radiomics_Filter_exe.py  ibsi_feature_formater.py
src/feature_selection/: FeatureSelector.py  HyperparameterGenerator.py  SFS_feature_selection.py  (+1 more)
(+27 files in other folders)
