[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rptk"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["rptk", "rptk.src", "rptk.mirp"]
package-dir = { "rptk" = ".", "rptk.src" = "src", "rptk.mirp" = "mirp" }